--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <h1>Game of Rock, Paper and Scissors</h1>
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+    <div id="message"></div>
+    <div id="score"></div>
     <script src="myscript.js"></script>
 </body>
 </html>
